<resources>
    <string name="app_name">PATHFIT3</string>
    <string name="title_activity_home_module">homeModule</string>
    <string name="title_home">Home</string>
    <string name="title_lesson">Lessons</string>
    <string name="title_tutorials">Tutorials</string>
    <string name="title_settings">Settings</string>
    <string name="fragment_intro">Teaching you to dance</string>
    <string name="title_about">About Us</string>
    <string name="startUp">Welcome!</string>
    <string name="startUp1">Ready To Dance?</string>
    <string name="dev_Lorence">Lorence Cerezo</string>
    <string name="dev_Jerard">Jerard Maliwat</string>
    <string name="dev_Jericho">Jericho Mercado</string>
    <string name="dev_Reniel">Reniel John Supan</string>
    <string name="cerezo_gmail">lorence2518cerezo@gmail.com</string>
    <string name="maliwat_gmail">Jerardmaliwat07@gmail.com</string>
    <string name="dialog_title_passed">Passed</string>
    <string name="dialog_title_failed">Failed</string>
    <string name="dialog_message">Score is %1$d out of %2$d</string>
    <string name="dialog_positive_button">Start Next Quiz</string>
    <string name="dialog_neutral_button">Restart Quiz</string>
    <string name="dialog_negative_button">Finish Quiz</string>
    <string name="welcome_message">Welcome to PATHFIT3!</string>
    <string name="mission_statement">At PATHFIT3, we believe that dance is not just a series of movements; it’s a dynamic form of expression that enriches lives. Our goal is to make dance education accessible to everyone, regardless of experience. Through our innovative Android app, we’re dedicated to helping you explore and master the art of dance.</string>
    <string name="audience_statement">Whether youre a Student or a PE Teacher looking to enhance your learning and dance skills, PATHFIT3 is designed to support you at every stage of your dance journey. Our app features:\n</string>
    <string name="dance_curriculum">• Comprehensive Dance Curriculum: \nOur carefully curated curriculum covers a variety of dance styles, from ballet and hip-hop to contemporary and cheer dance. Each section includes detailed lessons that break down techniques and movements, allowing you to learn progressively.\n</string>
    <string name="structured_learning">• Structured Learning Paths: \nWe offer tailored learning paths that guide you through each dance style, ensuring you build a solid foundation before moving on to more advanced techniques. This structured approach helps you develop confidence and skill over time.\n</string>
    <string name="interactive_tutorials">• Interactive Tutorials: \nEngage with our step-by-step video tutorials that provide clear demonstrations and helpful tips for mastering each dance move. You’ll be able to practice at your own pace, with the ability to revisit lessons as needed.\n</string>
    <string name="passion_statement">At PATHFIT3, we’re passionate about fostering a love for dance while promoting fitness and well-being. We invite you to download the PATHFIT3 app today and embark on a rewarding journey of Pathfit 3 dance education!</string>
    <string name="question_1_benefitDanceHard">Improves body coordination and flexibility</string>
    <string name="question_2_benefitDanceHard">Lower body mass index</string>
    <string name="question_3_benefitDanceHard">Helps keep the brain sharp</string>
    <string name="question_4_benefitDanceHard">Increase self esteem</string>
    <string name="question_5_benefitDanceHard">Improves body image</string>
    <string name="question_6_benefitDanceHard">Give sense of togetherness within a group</string>
    <string name="question_7_benefitDanceHard">Promotes cultural values</string>
    <string name="question_8_benefitDanceHard">Contribute to the individuals self-actualization in society</string>
    <string name="question_9_benefitDanceHard">Decreases depressive symptoms</string>
    <string name="question_10_benefitDanceHard">Improve lipid metabolism</string>
    <string name="question_11_benefitDanceHard">Aids in releasing emotional and physical tension</string>
    <string name="question_12_benefitDanceHard">Lower resting heart rate</string>
    <string name="question_13_benefitDanceHard">Decrease incidence of Dementia and Alzheimers Disease</string>
    <string name="question_14_benefitDanceHard">Develop cardiovascular endurance</string>
    <string name="question_15_benefitDanceHard">Lower risks of cardiovascular diseases</string>
    <string name="question_16_benefitDanceHard">Encourages positive social interaction</string>
    <string name="question_17_benefitDanceHard">Enable joint mobility</string>
    <string name="question_18_benefitDanceHard">Helps improve and maintain bone density</string>
    <string name="question_19_benefitDanceHard">Encourages interpersonal relationships in group</string>
    <string name="question_20_benefitDanceHard">Improves balance and body composition</string>
    <string-array name="choices_1_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_2_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_3_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_4_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_5_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_6_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_7_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_8_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_9_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_10_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_11_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_12_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_13_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_14_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_15_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_16_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_17_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_18_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_19_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string-array name="choices_20_benefitDanceHard">
        <item>Physical</item>
        <item>Emotional/Mental</item>
        <item>Social</item>
        <item>Cultural</item>
    </string-array>
    <string name="correct_answer_1_benefitDanceHard">Physical</string>
    <string name="correct_answer_2_benefitDanceHard">Physical</string>
    <string name="correct_answer_3_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_4_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_5_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_6_benefitDanceHard">Social</string>
    <string name="correct_answer_7_benefitDanceHard">Cultural</string>
    <string name="correct_answer_8_benefitDanceHard">Social</string>
    <string name="correct_answer_9_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_10_benefitDanceHard">Physical</string>
    <string name="correct_answer_11_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_12_benefitDanceHard">Physical</string>
    <string name="correct_answer_13_benefitDanceHard">Emotional/Mental</string>
    <string name="correct_answer_14_benefitDanceHard">Physical</string>
    <string name="correct_answer_15_benefitDanceHard">Physical</string>
    <string name="correct_answer_16_benefitDanceHard">Social</string>
    <string name="correct_answer_17_benefitDanceHard">Physical</string>
    <string name="correct_answer_18_benefitDanceHard">Physical</string>
    <string name="correct_answer_19_benefitDanceHard">Social</string>
    <string name="correct_answer_20_benefitDanceHard">Cultural</string>
    <string name="benefitDanceEz_question_1">Improves body coordination and flexibility</string>
    <string name="benefitDanceEz_question_2">Lower body mass index</string>
    <string name="benefitDanceEz_question_3">Helps keep the brain sharp</string>
    <string name="benefitDanceEz_question_4">Increase self-esteem</string>
    <string name="benefitDanceEz_question_5">Improves body image</string>
    <string name="benefitDanceEz_question_6">Does dance enable joint mobility?</string>
    <string name="benefitDanceEz_question_7">Does dance help improve and maintain bone density?</string>
    <string name="benefitDanceEz_question_8">Does dance encourage interpersonal relationships in a group?</string>
    <string name="benefitDanceEz_question_9">Does dance improve balance and body composition?</string>
    <string name="benefitDanceEz_question_10">Does dance lower risks of cardiovascular diseases?</string>
    <string name="danceAs">Dance As:</string>
    <string name="lesson1_DancePeriods">Dance Periods</string>
    <string name="lesson1_PreHistoric">Pre-Historic</string>
    <string name="lesson1_BenefitOfDance">Benefit Of Dance</string>
    <string name="lesson2_natureOfDance">Nature Of Dance</string>
    <string name="prehistoric_Topic">A major form of religious ritual and social expression with primitive cultures. A way of expressing and tribal unity and strength.\n \n An approach for courtship and mating \n \n A means of worship communication and therapeutic experience.</string>
</resources>