<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/screenBackGround"
    tools:context=".AboutUs">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_message"
                android:textSize="23sp"
                android:textStyle="bold"
                android:paddingBottom="16dp"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mission_statement"
                android:textSize="16sp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/audience_statement"
                android:textSize="16sp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dance_curriculum"
                android:textSize="16sp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/structured_learning"
                android:textSize="16sp"
                android:paddingBottom="8dp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/interactive_tutorials"
                android:textSize="16sp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passion_statement"
                android:textSize="16sp"
                android:fontFamily="@font/arvo"
                style="@style/textColorCloud" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
