<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="4dp"
    app:cardCornerRadius="15dp"
    android:layout_margin="8dp"
    style="@style/cardBackGround">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Title and Description (Always Visible) -->
        <TextView
            android:id="@+id/card_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lesson1_PreHistoric"
            android:textSize="24sp"
            android:textStyle="bold"
            style="@style/textColorCloud"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/card_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/danceAs"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/textColorCloud"
            android:layout_marginBottom="16dp"/>

        <!-- Expandable Content -->
        <LinearLayout
            android:id="@+id/card_expandable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/mayor"
                android:contentDescription="@mipmap/mayor"/>

            <TextView
                android:id="@+id/card_topic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prehistoric_Topic"
                android:textSize="18sp"
                android:textAlignment="textStart"
                style="@style/textColorCloud"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
