<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".quiz.quizActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/txtPathfit"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:text="@string/app_name"
            android:textSize="35sp"
            style="@style/textColor"
            android:layout_marginStart="18dp"
            android:fontFamily="@font/arvo"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/imgPathfit"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/pathfitDesc"
            android:text="Quiz for PATHFIT 3"
            style="@style/textColor"

            android:textSize="17sp"
            android:layout_marginStart="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtPathfit"
            app:layout_constraintEnd_toStartOf="@id/imgPathfit"/>

        <!--Need palitan ng logo yung pic-->
        <ImageView
            android:id="@+id/imgPathfit"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:src="@mipmap/brain_exercise"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toEndOf="@+id/txtPathfit"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgPathfit">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/crdQuiz_dancePeriods"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/clothingName"
                        android:text="@string/lesson1_DancePeriods"
                        android:textSize="20sp"
                        android:textColor="@color/pixelBlue"
                        android:fontFamily="@font/arvo"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/lessonImage"/>
                    <ImageView
                        android:layout_width="110dp"
                        android:layout_height="85dp"
                        android:id="@+id/lessonImage"
                        android:src="@mipmap/lesson"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/crdQuiz_benefitsOfDance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/elecName"
                        android:text="@string/lesson1_BenefitOfDance"
                        android:textSize="20sp"
                        android:textColor="@color/pixelBlue"
                        android:fontFamily="@font/arvo"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/tutorialImage"/>
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/tutorialImage"
                        android:src="@mipmap/tutorials"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:id="@+id/row2"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <androidx.cardview.widget.CardView
                android:id="@+id/crdQuiz_natureOfDance"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/homeName"
                        android:text="@string/lesson2_natureOfDance"
                        android:textSize="20sp"
                        android:textColor="@color/pixelBlue"
                        android:fontFamily="@font/arvo"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/quizImage"/>
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:id="@+id/quizImage"
                        android:src="@mipmap/quiz"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>